--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 skills through hands-on projects, internships, and industrial training programs.</p>
             </div>
             <div class="resume-item">
-              <h4>Higher Secondar Education</h4>
+              <h4>Higher Secondary Education</h4>
               <h5>2018 - 2019</h5>
               <p><em>Government Nutan Higher Secondary School</em></p>
               <p>I successfully completed my 12th grade education with Physics, Chemistry, and Mathematics (PCM) as my
