--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Bhola Vishwkarma</h1>
-      <p>I'm <span class="typed" data-typed-items="Front-end Developer, Back-end Developer, "></span></p>
+      <p><span class="typed" data-typed-items="I'm Full Stack Developer,Crafting Digital Futures... "></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -202,12 +202,65 @@
             user interfaces with React.js, leveraging its capabilities to create responsive single-page applications.
             Furthermore, I demonstrate proficiency in MySQL, effectively managing relational databases for data storage,
             manipulation, and retrieval in web applications.
+            My some skills are:-
           </p>
         </div>
 
         <div class="row skills-content">
 
-          <div class="col-lg-6" data-aos="fade-up">
+          <div class="row">
+            <div class="col-lg-1 col-md-2 col-sm-4 col-6 mb-3">
+              <img src="https://cdn.iconscout.com/icon/free/png-512/free-java-60-1174953.png?f=webp&w=256" alt="Java"
+                class="img-fluid">
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-4 col-6 mb-3">
+              <img src="https://cdn.iconscout.com/icon/free/png-512/free-javascript-1-225993.png?f=webp&w=256"
+                alt="JavaScript" class="img-fluid">
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-4 col-6 mb-3">
+              <img src="https://cdn.iconscout.com/icon/free/png-512/free-html-59-225995.png?f=webp&w=256" alt="HTML"
+                class="img-fluid">
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-4 col-6 mb-3">
+              <img src="https://cdn.iconscout.com/icon/free/png-512/free-css-38-226095.png?f=webp&w=256" alt="CSS"
+                class="img-fluid">
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-4 col-6 mb-3">
+              <img src="https://cdn.iconscout.com/icon/free/png-512/free-bootstrap-6-1175203.png?f=webp&w=256"
+                alt="Bootstrap" class="img-fluid">
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-4 col-6 mb-3">
+              <img src="https://cdn.iconscout.com/icon/free/png-512/free-nodejs-2-226035.png?f=webp&w=256" alt="Node.js"
+                class="img-fluid">
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-4 col-6 mb-3">
+              <img src="https://cdn.iconscout.com/icon/free/png-512/free-express-2-282577.png?f=webp&w=256"
+                alt="Express" class="img-fluid">
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-4 col-6 mb-3">
+              <img src="https://cdn.iconscout.com/icon/free/png-512/free-postman-3521648-2945092.png?f=webp&w=256"
+                alt="Postman" class="img-fluid">
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-4 col-6 mb-3">
+              <img src="https://cdn.iconscout.com/icon/free/png-512/free-react-3-1175109.png?f=webp&w=256" alt="React"
+                class="img-fluid">
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-4 col-6 mb-3">
+              <img src="https://cdn.iconscout.com/icon/free/png-512/free-mysql-3521596-2945040.png?f=webp&w=256"
+                alt="MySQL" class="img-fluid">
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-4 col-6 mb-3">
+              <img src="https://cdn.iconscout.com/icon/free/png-512/free-mongodb-5-1175140.png?f=webp&w=256"
+                alt="MongoDB" class="img-fluid">
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-4 col-6 mb-3">
+              <img src="https://cdn.iconscout.com/icon/free/png-512/free-github-163-761603.png?f=webp&w=256"
+                alt="GitHub" class="img-fluid">
+            </div>
+          </div>
+
+
+          <!-- <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
               <span class="skill">HTML <i class="val">100%</i></span>
@@ -275,7 +328,7 @@
 
             </div>
 
-          </div>
+          </div> -->
 
         </div>
     </section><!-- End Skills Section -->
@@ -502,39 +555,47 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>As a fresher full stack developer, I am equipped to provide a range of services tailored to meet the needs of clients and employers. Drawing upon my skills, knowledge, and proficiency in various technologies, I offer the following services:</p>
+          <p>As a fresher full stack developer, I am equipped to provide a range of services tailored to meet the needs
+            of clients and employers. Drawing upon my skills, knowledge, and proficiency in various technologies, I
+            offer the following services:</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
             <h4 class="title"><a href="">Website Development</a></h4>
-            <p class="description">Create static or dynamic websites for clients using front-end technologies like HTML, CSS, JavaScript and back-end technologies like Node.js.</p>
+            <p class="description">Create static or dynamic websites for clients using front-end technologies like HTML,
+              CSS, JavaScript and back-end technologies like Node.js.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
             <h4 class="title"><a href="">Web Application Development</a></h4>
-            <p class="description">Build interactive web applications using frameworks like React.js for the front end and frameworks like Express.js, NodeJs for the back end.</p>
+            <p class="description">Build interactive web applications using frameworks like React.js for the front end
+              and frameworks like Express.js, NodeJs for the back end.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
             <h4 class="title"><a href="">E-commerce Solutions</a></h4>
-            <p class="description">Develop e-commerce websites or integrate e-commerce functionality into existing websites using platforms like WooCommerce, Shopify, or custom-built solutions.</p>
+            <p class="description">Develop e-commerce websites or integrate e-commerce functionality into existing
+              websites using platforms like WooCommerce, Shopify, or custom-built solutions.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-binoculars"></i></div>
             <h4 class="title"><a href="">Database Design and Management</a></h4>
-            <p class="description">Design, implement, and manage databases using SQL or NoSQL databases such as MySQL, PostgreSQL or MongoDB</p>
+            <p class="description">Design, implement, and manage databases using SQL or NoSQL databases such as MySQL,
+              PostgreSQL or MongoDB</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
             <h4 class="title"><a href="">API Development</a></h4>
-            <p class="description">Create RESTful or GraphQL APIs to enable communication between different parts of a web application or to integrate third-party services.</p>
+            <p class="description">Create RESTful or GraphQL APIs to enable communication between different parts of a
+              web application or to integrate third-party services.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
             <h4 class="title"><a href="">Testing and Quality Assurance</a></h4>
-            <p class="description">Perform testing and debugging of web applications to ensure they meet quality standards and are free of bugs and errors.</p>
+            <p class="description">Perform testing and debugging of web applications to ensure they meet quality
+              standards and are free of bugs and errors.</p>
           </div>
         </div>
 
@@ -640,7 +701,8 @@
           <h2>Contact</h2>
           <p>Have a question, suggestion, or just want to chat? I'm here to help! Whether you're seeking information
             about my services, have a project idea in mind, or simply want to say hello, don't hesitate to reach out.
-            You can contact me directly via email at <span class="text-danger">bholav321@gmail.com</span> , I'll make sure to respond to your message promptly.
+            You can contact me directly via email at <span class="text-danger">bholav321@gmail.com</span> , I'll make
+            sure to respond to your message promptly.
           </p>
         </div>
 
